# spark-ai-python

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_cn.md  pyproject.toml
.github/workflows/: ci.yml
examples/: chat.py
examples/chat/: main.py
integration_tests/samples/demo/: demo.py
integration_tests/samples/doc/: doc.py
integration_tests/samples/short_mode/: test.py
integration_tests/samples/socket_mode/: websocket_client_example_another.py  websocket_client_example_ase.py  websocket_client_example_intactive.py
integration_tests/sparkai/memory/: test_memory.py
sparkai/: __init__.py  _client.py  deprecation.py  exceptions.py  messages.py  schema.py  version.py  xf_util.py
sparkai/api_resource/: __init__.py
sparkai/api_resource/chat/: __init__.py  async_completions.py  chat.py  completions.py
sparkai/api_resources/: __init__.py  chat_completion.py
sparkai/api_resources/chat/: __init__.py  chat.py  completions.py
sparkai/core/: __init__.py  _base_api.py  _base_type.py  _errors.py  _ws_client.py  caches.py  prompt_values.py  tools.py
sparkai/core/_api/: __init__.py  beta_decorator.py  deprecation.py  internal.py  path.py
sparkai/core/callbacks/: __init__.py  base.py  manager.py  stdout.py  streaming_stdout.py
sparkai/core/globals/: __init__.py
sparkai/core/language_models/: __init__.py  base.py  chat_models.py  llms.py
sparkai/core/load/: __init__.py  dump.py  load.py  mapping.py  serializable.py
sparkai/core/messages/: __init__.py  ai.py  base.py  chat.py  function.py  human.py  image_chat.py  system.py  tool.py
sparkai/core/outputs/: __init__.py  chat_generation.py  chat_result.py  generation.py  llm_result.py  run_info.py
sparkai/core/prompts/: base.py  chat.py  few_shot_with_templates.py  pipeline.py  prompt.py  string.py
sparkai/core/runnables/: __init__.py  base.py  branch.py  config.py  configurable.py  fallbacks.py  graph.py  history.py  passthrough.py  retry.py  router.py  utils.py
sparkai/core/tracers/: __init__.py  base.py  context.py  evaluation.py  langchain.py  langchain_v1.py  log_stream.py  root_listeners.py  run_collector.py  schemas.py  stdout.py
sparkai/core/utils/: __init__.py  function_calling.py  utils.py
sparkai/depreciated/: __init__.py
sparkai/depreciated/client/: llm.py  sample_langchain_spark.py
sparkai/depreciated/service/: api_server.py
sparkai/embedding/: __init__.py  embedding_test.py  spark_embedding.py  sparkai_base.py  test_llama.py
sparkai/errors/: __init__.py
sparkai/frameworks/: __init__.py
sparkai/frameworks/Embedding/: Embedding_test.py  spark_embedding.py
sparkai/frameworks/autogen/: __init__.py
sparkai/frameworks/llama_index/: __init__.py
sparkai/http_retry/: async_handler.py  builtin_async_handlers.py  builtin_handlers.py  handler.py
sparkai/langchain/client/: llm.py  sample_langchain_spark.py
sparkai/llm/: llm.py
sparkai/log/: __init__.py  logger.py
sparkai/memory/: __init__.py  buffer.py  buffer_window.py  chat_memory.py  combined.py  readonly.py  simple.py  token_buffer.py  utils.py
sparkai/models/: __init__.py  basic_objects.py
sparkai/socket_mode/: __init__.py  client.py  listeners.py  request.py  response.py
sparkai/spark_proxy/: generate_message.py  generate_stream.py  main.py  openai_types.py  pyproject.toml  server.py  spark_api.py  spark_auth.py
test/: spark_langchain.py  ws_short_con.py
tests/embedding_test/: embedding_test.py  test_llama.py
tests/examples/: llama_index_text.py  llm_test.py
tests/openai_test/: mock_multi_function.py  multi_function.py
tests/sparkai_test/: wrapper_write.py
(+22 files in other folders)
