[tool.poetry]
name = "spark-ai-python"
version = "0.3.3"
description = "a sdk for iflytek's spark LLM."
authors = ["whybeyoung <ybyang7@iflytek.com>","mingduan <mingduan@iflytek.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sparkai" }
]

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = ">3.3"
fastapi = {extras = ["all"], version = "^0.110.0"}
requests = "*"
nest-asyncio = "^1.6.0"
websocket-client = "^1.7.0"
websockets = "*"
nest_asyncio = "*"
uvicorn = ">=0.26.0"
packaging = "*"
tenacity = "*"
jsonpatch = "*"

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[[tool.poetry.source]]
name = "my-custom-repo"  # This name will be used in the configuration to retreive the proper credentials
url = "https://repo.model.xfyun.cn/api/packages/administrator/pypi"  # URL used to download your packages from
