[tool.poetry]
name = "spark-ai-python"
version = "0.4.1"
description = "a sdk for iflytek's spark LLM."
authors = ["whybeyoung <ybyang7@iflytek.com>", "mingduan <mingduan@iflytek.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sparkai" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
aiohttp = ">3.3"
requests = "*"
nest-asyncio = "^1.6.0"
websocket-client = "^1.7.0"
websockets = "*"
nest_asyncio = "*"
python-dotenv = "*"

packaging = "*"
tenacity = "*"
jsonpatch = "*"
pydantic = "*"
pyyaml = "*"
httpx = "*"
llama-index = "^0.10.24"
llama-index-vector-stores-chroma = "^0.1.6"

llama-index-core = { version = "^0.10.24.post1", optional = true }
pyautogen = { version = ">=0.2.20", optional = true }
uvicorn = { version = ">=0.26.0", optional = true }
fastapi = { extras = ["all"], version = "^0.110.0", optional = true}

[tool.poetry.extras]
llama_index = [
    "llama-index-core"
]
autogen = [
    "pyautogen"
]
proxy = [
    "fastapi",
    "uvicorn"
]

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "my-custom-repo"  # This name will be used in the configuration to retreive the proper credentials
url = "https://repo.model.xfyun.cn/api/packages/administrator/pypi"  # URL used to download your packages from
priority = "primary"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

